# new_game

./: .gitignore  Makefile  README.md  game.py  game_option.py  massage_window.py  pyproject.toml  read_image_material.py  title_screen.py  zikken.py
.github/: issue_template.md  pull_request_template.md
.github/workflows/: unittest_action.yml
src/: __main__.py  game.py  game_option.py  game_title.py  story_01.py  test_sample.py  zikken.py
tests/: test_sample_test.py
utilities/: resize.py
